# Move37

./: .bashrc  .env.example  .gitignore  .pre-commit-config.yaml  .zshrc  AGENTS.md  CLAUDE.md  README.md  compose.yml  mcp.vscode.json.example  package-lock.json  prompt-history.md  python-requirements.txt
.claude/agents/: calendar-analyst.md  calendar-engineer.md  calendar-tester.md  ui-analyst.md  ui-engineer.md  ui-tester.md
.claude/commands/: calendar.md  ui.md
.codex/: config.toml
.devcontainer/: .gitignore  compose.yml  devcontainer.json  devcontainer.rst  python-requirements.txt  sys-requirements.txt
.devcontainer/docker/: Dockerfile  Dockerfile.tools
.devcontainer/scripts/: postCreate.sh  postStart.sh
.github/: pull_request_template.md
.github/workflows/: deploy-api.yml  deploy-contributor-docs.yml  deploy-db.yml  deploy-docs.yml  deploy-eks-access-role.yml  deploy-eks.yml  deploy-oidc-bootstrap.yml  (+3 more)
assessment/: issue_23_implementation_plan.md  issue_selection_recommendation.md  prompt-history.md
contributing-docs/: docusaurus.config.js  package.json  sidebars.js
devtools/: Dockerfile  README.md  pyproject.toml
devtools/config/: move37.repo.toml
devtools/src/mv37_devtools/: __init__.py  __main__.py  apply.py  cli.py  config_schema.py  github_client.py  planner.py  secrets.py
devtools/tests/: test_apply.py  test_cli.py  test_config_schema.py  test_planner.py  test_secrets.py  test_wrapper.py
fern/: .gitignore  Dockerfile  README.md  docs.yml  fern.config.json  generators.yml
tests/: python-requirements.txt  test_data_expectations.py
(+175 files in other folders)
